--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
             <img src="images/mh-bg.png" alt="">
         </div>
     </section>
+    <section class="middle-banner">
+        <div class="middle-half-width">
+            <img src="images/_DSC0113.jpg" alt="" srcset="">
+        </div>
+        <div class="middle-banner">
+            <h1>Dream Big</h1>
+            <h2>Become a Web Developer</h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="middle-button" href="http://" rel="noopener noreferrer">DOWNLOAD RESUME</a>
+        </div>
+
+    </section>
 
 
 </body>
