--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </section>
     <section class="middle-banner">
         <div class="middle-half-width">
-            <img src="images/_DSC0113.jpg" alt="" srcset="">
+            <img src="images/rightpic.jpg" alt="" srcset="">
         </div>
         <div class="middle-banner">
             <h1>Dream Big</h1>
