--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner upper-section">
         <div class="half-width">
             <h1>Welcome to </h1>
             <h2> <span class="orange-color"> Noobs Developer</span> world ! </h2>
@@ -30,7 +30,7 @@
             <img src="images/mh-bg.png" alt="">
         </div>
     </section>
-    <section class="middle-banner">
+    <section class="middle-banner upper-section">
         <div class="middle-half-width">
             <img src="images/rightpic.jpg" alt="" srcset="">
         </div>
@@ -41,7 +41,27 @@
                 to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
             <a class="middle-button" href="http://" rel="noopener noreferrer">DOWNLOAD RESUME</a>
         </div>
-
+    </section>
+    <section class="bottom-section">
+        <div>
+            <h1>Experiences</h1>
+        </div>
+        <div class="flexible-container">
+            <div class="bottom-half-width">
+                <h2>Full Stack Web Develope</h2>
+                <h3 class="color-orange">2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="bottom-half-width">
+                <h2>Baby Web Developer</h2>
+                <h3 class="color-orange">2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                </p>
+            </div>
+        </div>
     </section>
 
 
