--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </section>
     <section class="middle-banner upper-section">
         <div class="middle-half-width">
-            <img src="images/rightpic.jpg" alt="" srcset="">
+            <img src="images/new-middle.jpg" alt="" srcset="">
         </div>
         <div class="middle-banner">
             <h1>Dream Big</h1>
@@ -47,14 +47,14 @@
             <h1>Experiences</h1>
         </div>
         <div class="flexible-container">
-            <div class="bottom-half-width">
+            <div id="dev-1" class="bottom-half-width">
                 <h2>Full Stack Web Develope</h2>
                 <h3 class="color-orange">2021-Present | Pro Level Developer</h3>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
                     efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
                     Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
             </div>
-            <div class="bottom-half-width">
+            <div id="dev-2" class="bottom-half-width">
                 <h2>Baby Web Developer</h2>
                 <h3 class="color-orange">2020-2021 | Programming Hero Learner</h3>
                 <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
@@ -63,6 +63,9 @@
             </div>
         </div>
     </section>
+    <footer>
+        <p>© NOOB Developer 2021, a very simple initiative.</p>
+    </footer>
 
 
 </body>
